# rl-agents

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .style.yapf  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tox.ini
docs/: Makefile  make.bat
docs/source/: agents.rst  conf.py  envs.rst  index.rst  installation.rst  modules.rst  requirements.txt  runners.rst  usage.rst
docs/source/_templates/: badges.html  github.html
ipython_notebooks/: tabular.ipynb
src/: conftest.py
src/rl_agents/: __init__.py  example.py
src/rl_agents/agents/: __init__.py  core.py
src/rl_agents/agents/functions/: __init__.py  base.py  tabular_functions.py
src/rl_agents/agents/mab/: __init__.py  base.py  egreedy.py  pursuit.py  softmax.py  ucbs.py
src/rl_agents/agents/policies/: __init__.py  tabular_policies.py
src/rl_agents/agents/tabular/: __init__.py  td_learning.py
src/rl_agents/envs/: __init__.py  k_armed.py
src/rl_agents/runners/: __init__.py  mab_runner.py  tab_runner.py
tests/: __init__.py  test_envs.py  test_mab.py  test_rl_agents.py  test_tabular.py
