[tool.poetry]
name = "rl-agents"
version = "0.1.0"
description = "Implementation of various reinforcement learning methods."
authors = ["Mateus Mota <mateuspontesm@outlook.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
keywords = ["rl-agents"]
repository = "https://github.com/mateuspontesm/rl-agents"
packages = [
    { include = "rl_agents", from = "src" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mateuspontesm/rl-agents/issues"
"Source" = "https://github.com/mateuspontesm/rl-agents"
"Documentation" = "https://rl-agents.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
# Python tools:
pip = "^19.2.3"
wheel = "^0.33.6"
watchdog = "^0.9.0"
bump2version = "^1.0.0"
# Style:
flake8 = "^3.7.8"
isort = {extras = ["pyproject"], version = "^4.3.21"}
yapf = "^0.29.0"
pre-commit = "^2.1.0"
# Testing:
tox = "^3.14.0"
coverage = "^4.5.4"
pytest = "^4.6.5"
pytest-runner = "^5.1"
pytest-cov = "^2.6.0"
# Docs:
Sphinx = "^1.8.5"
numpydoc = "^0.9.2"
sphinx_rtd_theme = "^0.4.3"

# CLI:


[tool.isort]
known_first_party = 'rl_agents'
known_third_party = ["click", "pytest"]
skip= 'docs/source/conf.py'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
